@@ -22,6 +22,7 @@
 - Add 2 error returns to python bindings
 - Update the man pages a little
 - Add some debug info to audidp-remote startup and shutdown
+- In auditd, if disk_error_action is ignore, limit syslog messages to 5
 
 1.7.18
 - Update time examples in ausearch/report man pages
